<resources>
    <string name="app_name">LAB_WEEK_03</string>
    <string name="affogato_title">AFFOGATO</string>
    <string name="affogato_desc">Espresso poured on a vanilla ice cream. Served in a cappuccino cup.</string>

    <string name="americano_title">AMERICANO</string>
    <string name="americano_desc">Espresso with added hot water (100-150 ml). Often
served in a cappuccino cup. (The espresso is added into the hot water rather than
all the water being flowed through the coffee that would lead to over
extraction.)</string>

    <string name="latte_title">CAFFE LATTE</string>
    <string name="latte_desc">A tall, mild \'milk coffee\' (about 150-300 ml). An
espresso with steamed milk and only a little milk foam poured over it. Serve in a
latte glass or a coffee cup. Flavored syrup can be added.</string>

    <string name="cappuccino">CAPPUCCINO</string>
    <string name="cappuccino_desc">Cappuccino is a latte with more a lot of foam besides the steamed-milk. Furthermore, the variants from cappuccino is tends to be more diverse</string>
    
    <string name="macchiato">MACCHIATO</string>
    <string name="macchiato_desc">Macchiato is a coffee that based on espresso and a little foam added on top</string>

    <string name="coffee_list">Coffee List</string>
</resources>